--- a/Lunar.html
+++ b/Lunar.html
@@ -4,7 +4,7 @@
 #&#39;&#39;LUNAR&#39;&#39;
 
 &lt;==&gt;
-A piece of interactive fiction by [[Jennifer Morris|author]] about being let go
+A piece of interactive fiction by [[Jennifer Wilde|author]] about being let go
 
 [[Start|opening]]
 
